Made it so E. woodii trees generate naturally, added Chocolate Cosmos flower, added dev_tools folder for (mainly python) tools to aid in development, added missing blockbench models to the models folder, and also did some tweaks here and there that I forgot.

--- a/architectury/common/build.gradle
+++ b/architectury/common/build.gradle
@@ -1,6 +1,17 @@
+plugins {
+    id 'dev.architectury.loom' version '1.7-SNAPSHOT'
+}
+
+
 architectury {
     common rootProject.enabled_platforms.split(',')
 }
+
+ext {
+    parchment_mc_version = "1.18.2"
+    parchment_date = "2022.05.22"
+}
+
 
 dependencies {
     // We depend on Fabric Loader here to use the Fabric @Environment annotations,
@@ -15,7 +26,20 @@ dependencies {
 
     mappings(loom.layered {
         officialMojangMappings()
-//        parchment("org.parchmentmc.data:parchment-$parchment_mc_version:$parchment_date@zip")
+        parchment("org.parchmentmc.data:parchment-$parchment_mc_version:$parchment_date@zip")
 //        addLayer(new FixGeckoLibSpec())
     })
 }
+
+repositories {
+    maven {
+        name = "Minecraft Maven"
+        url = "https://maven.minecraftforge.net"
+    }
+    maven {
+        name = "Fabric Maven"
+        url = "https://maven.fabricmc.net"
+    }
+    mavenCentral()
+}
+
